syntax = "proto3";

package confidence.flags.admin.v1;

import "google/api/resource.proto";
import "google/api/field_behavior.proto";
import "google/protobuf/struct.proto";

import "confidence/flags/types/v1/target.proto";
import "confidence/flags/types/v1/types.proto";

option java_package = "com.spotify.confidence.flags.admin.v1";
option java_multiple_files = true;
option java_outer_classname = "TypesProto";

// A reusable slice of an entity population.
// Minimal version for resolver - unused fields removed.
message Segment {
  option (google.api.resource) = {
    type: "flags.confidence.dev/Segment"
    pattern: "segments/{segment}"
    singular: "segment"
    plural: "segments"
  };

  // The resource name of the segment.
  string name = 1 [(google.api.field_behavior) = IDENTIFIER];

  // The targeting that this segment adheres to.
  flags.types.v1.Targeting targeting = 2;

  // A bitset representing the buckets that are allocated for this segment.
  BitsetAllocation bitset_allocation = 6 [(google.api.field_behavior) = OUTPUT_ONLY];

  // A bit set where each bit represents a fixed fraction of the entity
  // population.
  message BitsetAllocation {
    // Byte encoded bitset.
    bytes bitset = 1;
  }
}

// A flag controlling how entities are assigned variants.
// Minimal version for resolver - unused fields removed.
message Flag {
  option (google.api.resource) = {
    type: "flags.confidence.dev/Flag"
    pattern: "flags/{flag}"
    singular: "flag"
    plural: "flags"
  };

  // The resource name of the flag.
  string name = 1 [
    (google.api.field_behavior) = IMMUTABLE,
    (google.api.field_behavior) = IDENTIFIER
  ];

  // Schema for the value of each variant.
  flags.types.v1.FlagSchema.StructFlagSchema schema = 2 [
    (google.api.field_behavior) = OPTIONAL
  ];

  // List of variants for this flag.
  repeated Variant variants = 3;

  // The current state of the flag.
  State state = 4 [
    (google.api.field_behavior) = OUTPUT_ONLY,
    (google.api.field_behavior) = REQUIRED
  ];

  // List of ordered rules that determines how entities are assigned to variants.
  repeated Rule rules = 5;

  // List of clients that this flag is enabled for.
  repeated string clients = 12 [
    (google.api.resource_reference).type = "iam.confidence.dev/Client"
  ];

  // State of the flag.
  enum State {
    // Unspecified state.
    STATE_UNSPECIFIED = 0;
    // The flag is active and can be resolved.
    ACTIVE = 1;
    // The flag is no longer active.
    ARCHIVED = 2;
  }

  // A possible named value the flag can assign.
  message Variant {
    option (google.api.resource) = {
      type: "flags.confidence.dev/Variant"
      pattern: "flags/{flag}/variants/{variant}"
      singular: "variant"
      plural: "variants"
    };

    // The resource name of the variant.
    string name = 1 [
      (google.api.field_behavior) = REQUIRED,
      (google.api.field_behavior) = IDENTIFIER
    ];

    // The value that this variant represents.
    google.protobuf.Struct value = 2 [
      (google.api.field_behavior) = REQUIRED
    ];
  }

  // A rule that decides how a subset of the flags variants are assigned.
  message Rule {
    option (google.api.resource) = {
      type: "flags.confidence.dev/Rule"
      pattern: "flags/{flag}/rules/{rule}"
      singular: "rule"
      plural: "rules"
    };

    // The resource name of the rule.
    string name = 1 [(google.api.field_behavior) = IDENTIFIER];

    // A reference to the segment that this rule uses.
    string segment = 2 [
      (google.api.resource_reference).type = "flags.confidence.dev/Segment",
      (google.api.field_behavior) = REQUIRED
    ];

    // Selector of what key to randomize on from the evaluation context.
    string targeting_key_selector = 5;

    // Decides if the rule should be enabled for resolve or not.
    bool enabled = 11 [
      (google.api.field_behavior) = REQUIRED
    ];

    // Specification of how an entity should be randomly assigned to values.
    AssignmentSpec assignment_spec = 12 [
      (google.api.field_behavior) = REQUIRED
    ];

    // Specifies if materializations are written to/read from.
    MaterializationSpec materialization_spec = 13;

    // Specifies if materializations are written to/read from.
    message MaterializationSpec {
      // Feeds assignments into materialization.
      string write_materialization = 1 [
        (google.api.resource_reference).type = "flags.confidence.dev/MaterializedSegment",
        (google.api.field_behavior) = OPTIONAL
      ];
      // Reads assignments from materialization.
      string read_materialization = 2 [
        (google.api.resource_reference).type = "flags.confidence.dev/MaterializedSegment",
        (google.api.field_behavior) = OPTIONAL
      ];
      // How materialization reads should be treated.
      MaterializationReadMode mode = 3 [(google.api.field_behavior) = OPTIONAL];

      // How materialization reads should be treated.
      message MaterializationReadMode {
        // If the materialization must match.
        bool materialization_must_match = 1;
        // If segment targeting can be ignored.
        bool segment_targeting_can_be_ignored = 2;
      }
    }

    // Describes how an entity is randomly assigned to a variant.
    message AssignmentSpec {
      // The total number of buckets to consider when randomizing.
      int32 bucket_count = 1;
      // A list that divides the total buckets into assignments.
      repeated Assignment assignments = 2;
    }

    // Maps a range of buckets to a value assignment.
    message Assignment {
      // Opaque identifier of this assignment.
      string assignment_id = 1;

      // Determines how the client should be assigned values.
      oneof assignment {
        // Assign a value from a variant.
        VariantAssignment variant = 2;
        // Assign a value from the first rule after this one that matches.
        FallthroughAssignment fallthrough = 3;
        // Assign the default values in the client.
        ClientDefaultAssignment client_default = 4;
      }

      // The range of buckets that the variant occupies.
      repeated BucketRange bucket_ranges = 5;

      // Assignment of a variant.
      message VariantAssignment {
        // Reference to a variant in the flag.
        string variant = 1 [
          (google.api.resource_reference).type = "flags.confidence.dev/Variant",
          (google.api.field_behavior) = REQUIRED
        ];
      }

      // No value will be assigned and passed on to the next rule.
      message FallthroughAssignment {}

      // No variant will be assigned and the client should return defaults.
      message ClientDefaultAssignment {}
    }

    // The range of buckets that a variant occupies.
    message BucketRange {
      // The start bucket (inclusive).
      int32 lower = 1 [(google.api.field_behavior) = REQUIRED];
      // The end bucket (exclusive).
      int32 upper = 2 [(google.api.field_behavior) = REQUIRED];
    }
  }
}

// Information about how a client resolved.
message ClientResolveInfo {
  // Resource reference to a client.
  string client = 1 [
    (google.api.resource_reference).type = "iam.confidence.dev/Client",
    (google.api.field_behavior) = REQUIRED
  ];

  // Resource reference to a credential.
  string client_credential = 2 [
    (google.api.resource_reference).type = "iam.confidence.dev/ClientCredential",
    (google.api.field_behavior) = REQUIRED
  ];

  // The different evaluation context schema of the client that have been seen recently.
  repeated EvaluationContextSchemaInstance schema = 3;

  // An instance of a schema that was seen.
  message EvaluationContextSchemaInstance {
    // Schema of each field in the evaluation context.
    map<string, EvaluationContextSchemaField.Kind> schema = 1;
    // Optional semantic type per field.
    map<string, ContextFieldSemanticType> semantic_types = 2;
  }
}

message FlagResolveInfo {
  // The flag the info is about.
  string flag = 1 [
    (google.api.resource_reference).type = "flags.confidence.dev/Flag",
    (google.api.field_behavior) = REQUIRED
  ];
  // Information about how variants were resolved.
  repeated VariantResolveInfo variant_resolve_info = 2;
  // Information about how rules were resolved.
  repeated RuleResolveInfo rule_resolve_info = 3;

  // Information about how a variant was resolved.
  message VariantResolveInfo {
    // If there was a variant assigned, otherwise not set.
    string variant = 1 [
      (google.api.resource_reference).type = "flags.confidence.dev/Variant",
      (google.api.field_behavior) = OPTIONAL
    ];
    // Number of times the variant was resolved in this period.
    int64 count = 3 [(google.api.field_behavior) = REQUIRED];
  }

  // Information about how a rule was resolved.
  message RuleResolveInfo {
    // The rule that was resolved.
    string rule = 1 [
      (google.api.resource_reference).type = "flags.confidence.dev/Rule",
      (google.api.field_behavior) = REQUIRED
    ];
    // Number of times the rule was resolved in this period.
    int64 count = 2 [(google.api.field_behavior) = REQUIRED];
    // Resolve counts on each assignment.
    repeated AssignmentResolveInfo assignment_resolve_info = 3 [(google.api.field_behavior) = OPTIONAL];
  }

  // Information about the assignment that was resolved.
  message AssignmentResolveInfo {
    // The assignment id of the resolved value, otherwise not set.
    string assignment_id = 1 [(google.api.field_behavior) = OPTIONAL];
    // Number of times the assignment id was resolved in this period.
    int64 count = 2 [(google.api.field_behavior) = REQUIRED];
  }
}

// The type of fields observed in an evaluation context.
message EvaluationContextSchemaField {
  // The observed types.
  repeated Kind types = 1;

  // The type of a field in the schema.
  enum Kind {
    // Unspecified kind.
    KIND_UNSPECIFIED = 0;
    // Null value observed.
    NULL_KIND = 1;
    // A number, integer or double, observed.
    NUMBER_KIND = 2;
    // A string observed.
    STRING_KIND = 3;
    // A boolean observed.
    BOOL_KIND = 4;
  }
}

// Semantic type of a field.
message ContextFieldSemanticType {
  oneof type {
    // If this is a country type, this specifies in what format.
    CountrySemanticType country = 1;
    // If this is an enum this specifies what value it has etc.
    EnumSemanticType enum_type = 2;
    // If this field is a reference to an entity.
    EntitySemanticType entity_reference = 3;
    // If this field is a semantic type.
    VersionSemanticType version = 4;
    // If this field is a date.
    DateSemanticType date = 5;
    // If this field is a timestamp.
    TimestampSemanticType timestamp = 6;
  }

  // Specifies a semver semantic type.
  message VersionSemanticType {}

  // Specifies a date semantic type.
  message DateSemanticType {}

  // Specifies a timestamp semantic type.
  message TimestampSemanticType {}

  // Specifies a country semantic type.
  message CountrySemanticType {
    // What format the country is specified in.
    CountryFormat format = 1 [(google.api.field_behavior) = REQUIRED];
    // Enum of different formats that country should be in.
    enum CountryFormat {
      // No semantic type for the field.
      COUNTRY_FORMAT_UNSPECIFIED = 0;
      // The field is a country specified by a 2 letter code.
      TWO_LETTER_ISO_CODE = 1;
    }
  }

  // Specifies an enum semantic type.
  message EnumSemanticType {
    // What allowed values exist for this enum.
    repeated EnumValue values = 1 [(google.api.field_behavior) = REQUIRED];

    // An allowed value for the enum.
    message EnumValue {
      // A possible value the enum can take.
      string value = 1;
    }
  }

  // Specifies a field that has a semantic type of entity.
  message EntitySemanticType {
    // A reference to the entity that exists in this field.
    string entity = 1 [
      (google.api.field_behavior) = REQUIRED,
      (google.api.resource_reference).type = "metrics.confidence.dev/Entity"
    ];
  }
}
